# learn-opengl

./: .gitignore  CMakeLists.txt  main.cpp
include/: game.hpp  resource_manager.hpp  shader.hpp  sprite_renderer.hpp  texture.hpp
include/glad/: glad.h
shaders/: fragment.fs
src/: game.cpp  glad.c  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  texture.cpp
